; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/notepad/extr_dialog.c_AlertPrintError.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/notepad/extr_dialog.c_AlertPrintError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64*, i32, i32 }

@MAX_STRING_LEN = common dso_local global i32 0, align 4
@Globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@STRING_UNTITLED = common dso_local global i32 0, align 4
@STRING_PRINTERROR = common dso_local global i32 0, align 4
@MB_ICONEXCLAMATION = common dso_local global i32 0, align 4
@MB_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @AlertPrintError to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AlertPrintError() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @MAX_STRING_LEN, align 4
  %4 = zext i32 %3 to i64
  %5 = call i8* @llvm.stacksave()
  store i8* %5, i8** %1, align 8
  %6 = alloca i64, i64 %4, align 16
  store i64 %4, i64* %2, align 8
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 2), align 4
  %8 = load i32, i32* @STRING_UNTITLED, align 4
  %9 = call i32 @ARRAY_SIZE(i64* %6)
  %10 = call i32 @LoadString(i32 %7, i32 %8, i64* %6, i32 %9)
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 1), align 8
  %12 = load i32, i32* @STRING_PRINTERROR, align 4
  %13 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 8
  %14 = getelementptr inbounds i64, i64* %13, i64 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %0
  %18 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 8
  br label %20

19:                                               ; preds = %0
  br label %20

20:                                               ; preds = %19, %17
  %21 = phi i64* [ %18, %17 ], [ %6, %19 ]
  %22 = load i32, i32* @MB_ICONEXCLAMATION, align 4
  %23 = load i32, i32* @MB_OK, align 4
  %24 = or i32 %22, %23
  %25 = call i32 @DIALOG_StringMsgBox(i32 %11, i32 %12, i64* %21, i32 %24)
  %26 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %26)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @LoadString(i32, i32, i64*, i32) #2

declare dso_local i32 @ARRAY_SIZE(i64*) #2

declare dso_local i32 @DIALOG_StringMsgBox(i32, i32, i64*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
